common/istio/istio-install/overlays/insecure/kubeflow-namespace-pss.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubeflow
  labels:
    control-plane: kubeflow
    istio-injection: enabled
    pod-security.kubernetes.io/enforce: privileged
