common/istio/istio-install/overlays/insecure/disable-cni-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istiod
  namespace: istio-system
spec:
  template:
    spec:
      containers:
      - name: discovery
        args:
        - discovery
        - --cniNamespace=
