common/istio/istio-install/overlays/insecure/allow-namespace-traffic.yaml
---
# Allow traffic within kubeflow-user-example-com namespace for testing, do we need it here or shall i add just in GHA worklow, since its just for the test?
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-test-namespace-traffic
  namespace: kubeflow-user-example-com
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["kubeflow-user-example-com"]
